// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`node should add custom class 1`] = `
<li
  className="indent-0 NoOpenButton Selectable custom-class"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should color the node icon with hex color 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-circle"
    style={
      Object {
        "color": "#F5F5F5",
      }
    }
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display custom icon 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="Icon fa fa-custom-icon"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display custom image as icon 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <img
    className="NodeIconImage"
    src="https://www.wpsuperstars.net/wp-content/uploads/2015/01/59.png"
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display error lazy loading icon 1`] = `
<li
  className="indent-0 Selectable"
  data-id="0"
>
  <i
    className="fa-exclamation-triangle Icon ExpandButton"
    onClick={[Function]}
  />
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display loading icon 1`] = `
<li
  className="indent-0 Selectable"
  data-id="0"
>
  <i
    className="fa fa-spinner fa-spin Icon ExpandButton"
    onClick={[Function]}
  />
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display partially checked icon 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display unique selected icon 1`] = `
<li
  className="indent-0 NoOpenButton Selectable selected"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="icon icon-selected"
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should display warning icon when undefined 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-question-circle Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should indicate changed checked node (icon and class) 1`] = `
<li
  className="indent-0 NoOpenButton Selectable changed-checkbox"
  data-id="0"
>
  <i
    className="fa fa-check-square Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should indicate selected node (icon and class) 1`] = `
<li
  className="indent-0 NoOpenButton Selectable selected"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="fa fa-check"
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should not display any icon (checkbox, icon, expand icon) 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should not render children nodes if collapsed 1`] = `
<li
  className="indent-0 Selectable"
  data-id="0"
>
  <i
    className="fa fa-angle-right Icon ExpandButton"
    onClick={[Function]}
  />
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should not render empty children 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should recolor both node icon ad icon background with color names 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-circle"
    style={
      Object {
        "backgroundColor": "green",
        "color": "red",
      }
    }
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should recolor the default icon color and background with rgba colors 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={
      Object {
        "backgroundColor": "rgba(90,60,90,1)",
        "color": "rgba(10,10,10,0.5)",
      }
    }
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should recolor the node icon background with rgb color 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-circle"
    style={
      Object {
        "backgroundColor": "rgb(100,255,100)",
      }
    }
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should render basic node 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should render children nodes if expanded 1`] = `
Array [
  <li
    className="indent-0 Selectable"
    data-id="0"
>
    <i
        className="fa fa-angle-down Icon ExpandButton"
        onClick={[Function]}
    />
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Rendered Node
    </span>
</li>,
  <li
    className="indent-1 NoOpenButton Selectable"
    data-id="0.0"
>
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Sub Node 0
    </span>
</li>,
  <li
    className="indent-1 NoOpenButton Selectable"
    data-id="0.1"
>
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Sub Node 1
    </span>
</li>,
]
`;

exports[`node should render expanded node with children 1`] = `
Array [
  <li
    className="indent-0 Selectable"
    data-id="0"
>
    <i
        className="fa fa-angle-down Icon ExpandButton"
        onClick={[Function]}
    />
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Rendered Node
    </span>
</li>,
  <li
    className="indent-1 NoOpenButton Selectable"
    data-id="0.0"
>
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Sub Node 0
    </span>
</li>,
  <li
    className="indent-1 NoOpenButton Selectable"
    data-id="0.1"
>
    <i
        className="fa fa-square-o Icon CheckboxButton"
        onClick={[Function]}
    />
    <i
        className="Icon fa fa-ban fa-fw"
        style={Object {}}
    />
    <span
        onClick={[Function]}
    >
        Sub Node 1
    </span>
</li>,
]
`;

exports[`node should render not render empty children 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;

exports[`node should render switched node and checkbox icon 1`] = `
<li
  className="indent-0 NoOpenButton Selectable"
  data-id="0"
>
  <i
    className="Icon fa fa-ban fa-fw"
    style={Object {}}
  />
  <i
    className="fa fa-square-o Icon CheckboxButton"
    onClick={[Function]}
  />
  <span
    onClick={[Function]}
  >
    Rendered Node
  </span>
</li>
`;
